--- a/AP/Forms/Home.resx
+++ b/AP/Forms/Home.resx
@@ -118,6 +118,26 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="BtnTest.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5QsGEDgTV+EQCQAAAwVJREFU
+        WEftltnLTVEYh485Q8iYkCkURRSuDBkiZLwhITM3hEwhU0rmZB6SOWOmzIRMV+4koly4c+sP8Dz7WL5l
+        n/OdIR9SfvV09tpn7/3+1rve9e6d+VfVBSZB3WT0h9Ud7sJb2Ay/xUQNGA89klGFesIjWA0auQHboT5U
+        qabCB3gInTyBesNjWAm1PIHawVXYDQ08URUaAS9hNGyFSzAKnsBSqAmx2sJl2AcNPfEr6gPPwQJTPvA4
+        fIElUB3yqQWcgwPQ2BMpdYORUC0ZVaLOYMoXJqMKtQLXeiOkZ+/YB8+EaeD9kyFWc7gJH2GYJ/KpEZwH
+        qzqsb6yuYPEZJFYTOAvr4SScgLkQpMEdcAzmg8/oCDkyRRZYm2SUXwvgKMRpNN1nYC2cAg3MgaDpYND2
+        4PJtA43m7Jqwt13LyuTDjmQPk5m5TXuBRevshsNBCBnoC9bT0GSUVTO4Bsvhp3rQwD1omYzySwOHwRvn
+        wTt4AHbFoP0wK3uYXGtm0uoHz6BDMvquUg2YAX99wCBYA7chrKsGTLFF+QrGQlpNwVjG/KFSDEyB9/AC
+        BnsC1YEtYFqtn71wGqwDDbhMQf3B7AyBO1C2gUXwGdx2serBHrgANi1nryzOCdnDpGbMzkXYBbegLAO6
+        fwoTk1GubFiu+VcIBtyewYBb2x3gJHZCWQZqg7Pz5kKywu/D7GSU38BiKNuAr9vrMDAZFZbvA1u2heb7
+        oWwDtk2PLRaxrbYG33hWfTG5zu4Q+4HbdByokg3ofAX4ejWVV8DA4beYNOAb04nky0DRGtDAMgjBNoHb
+        phwDoRXHNeAucHmspYK7IGRAlzPAWZSbgdCKYwNqAPhfwT4QasALxeZTbg2EVhz3gVjGMFZeA5XtAjtd
+        qQZCK/arKu6EQcbIMeD73rS4BGnZB8yAKSwm11kDLp8tewykZQxjGTORa34IPoEFYuHF2Ov9QLXH+1WU
+        /j/mNfj1sw7egDW0AeJrjGEsYxo7swr8I31hjP8VCy7xdYXuCbH8wv6v//qbymS+AUNbvtt9HyDaAAAA
+        AElFTkSuQmCC
+</value>
+  </data>
   <data name="BtnOptions.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
